# free-llm-hack-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  browser_pool.yaml  browser_pool.yaml.example  docker-compose.yml  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml
cmd/: main.go
examples/providers/: anthropic.yaml  groq.yaml  huggingface.yaml  openai.yaml
internal/api/: api.go  api_test.go  middleware.go  middleware_test.go
internal/browser/: browser.go  browser_test.go  factory.go  pool.go  pool_test.go
internal/config/: browser_pool.go  browser_pool_test.go  config.go
internal/providers/: errors.go  errors_test.go  provider.go  providers.go  providers_test.go  types.go
internal/providers/deepseek/: deepseek.go  deepseek_integration_test.go  deepseek_test.go  dom.yaml
internal/providers/mimo/: dom.yaml  mimo.go  mimo_test.go
internal/session/: SESSION_DATA_MODEL.md  schema.go  session.go  session_test.go  store.go  store_test.go
internal/session/testdata/: example.deepseek.json  example.mimo.json
scripts/: start_test_server.sh  test_endpoint.sh
src/: config.py
src/cli/: browser_login.py  main.py
src/providers/: __init__.py  base.py  config.py  errors.py  models.py  types.py
src/proxy/: __init__.py  metrics.py  queue.py  rate_limiter.py
src/utils/: session.py
tests/: test_browser_login.py  test_config.py  test_integration_smoke.py  test_metrics.py  test_providers.py  test_proxy.py  test_queue.py  test_rate_limiter.py  test_session.py
