[project]
name = "free-llm-hack-proxy"
version = "0.1.0"
description = "Proxy for free LLM access via public APIs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
llm-proxy = "src.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
